--- a/params.yaml
+++ b/params.yaml
@@ -1,8 +1,8 @@
-AUGMENTATION: True
+AUGMENTATION: False
 IMAGE_SIZE: [224, 224, 3]
 BATCH_SIZE: 16
 INCLUDE_TOP: False
-EPOCHS: 1
+EPOCHS: 3
 CLASSES: 2
 WEIGHTS: imagenet
-LEARNING_RATE: 0.001
+LEARNING_RATE: 0.01
